# kos

./: .gitignore  README.md
backend/: .env.example  Dockerfile  docker-compose.yml  fly.neo4j.toml  fly.toml  pyproject.toml  railway.toml
backend/fixtures/: ai_hardware.json  aviation_safety.json  climate_policy.json  drug_discovery.json  euv_lithography.json  extreme_environments.json  fukushima_governance.json  governance.json  math_category_theory.json  pandemic_governance.json  semiconductor_hardware.json  surgical_robotics.json
backend/kos/agent_ecology/: service.py
backend/kos/alignment/: service.py
backend/kos/api/: app.py
backend/kos/api/routes/: __init__.py  agents.py  alignment.py  decisions.py  evidence.py  goals.py  governance.py  graph.py  inference.py  knowledge.py  openendedness.py
backend/kos/collective_inference/: service.py
backend/kos/context_graph/: cypher.py  service.py
backend/kos/db/: __init__.py  chroma_client.py  neo4j_client.py  seed.py  serialise.py
backend/kos/evidence_graph/: service.py
backend/kos/goal_graph/: service.py
backend/kos/governance_graph/: service.py
backend/kos/knowledge_graph/: service.py
backend/kos/models/: __init__.py  agents.py  alignment.py  base.py  context.py  evidence.py  goal.py  governance.py  knowledge.py  transfer.py
backend/kos/open_endedness/: service.py
docs/: NEXT_STEPS.md  active_inference_in_omega.md  active_inference_layer.md  agency_and_goals.md  alife_and_collective_intelligence.md  alife_open_endedness_and_swarms.md  architecture_v2.md  category_theory_alignment.md  (+37 more)
(+97 files in other folders)
