[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kos"
version = "0.1.0"
description = "Knowledge Operating System — multi-layer graph substrate for Artificial Collective Intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "neo4j>=5.20.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.scripts]
kos = "kos.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
